# magnum

./: .gitignore  README.md  magnum.py
examples/ABCD/: ABCD.py  ABCDorig.py  README.md
magnum-app/: settings.gradle.kts
magnum-app/app/: build.gradle.kts
magnum-app/app/src/main/: AndroidManifest.xml
magnum-app/app/src/main/java/com/xabifdez/magnum/app/: CommandId.kt  CommandRequest.kt  CommandResponse.kt  MainActivity.kt  NetContext.kt  SlideActionButtonListAdapter.kt  SlideId.kt  SlideTree.kt  SlideTreeEntry.kt
magnum-app/app/src/main/res/layout/: activity_test.xml
magnum-app/app/src/main/res/values/: strings.xml  themes.xml
magnum-app/app/src/main/res/values-night/: themes.xml
magnum-app/app/src/main/res/values-v23/: themes.xml
magnum-app/gradle/: libs.versions.toml
magnum-app/gradle/wrapper/: gradle-wrapper.properties
magnum-player/: CMakeLists.txt  asset_gen.py
magnum-player/include/: comm.hpp  rt.hpp  slide.hpp  util.hpp
magnum-player/src/: comm.cpp  main.cpp  rt.cpp  slide.cpp
